# Benchora

./: .dockerignore  .gitignore  .prettierrc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SPEC.md  SSOT.md  audit_scorecard.json  deny.toml  package-lock.json  package.json  trace-gate.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit.yml  bench-gate.yml  cargo-deny.yml  ci.yml  codeql.yml  docs.yml  release-attestation.yml  scorecard.yml  secrets-scan.yml  trufflehog.yml
.grade-reports/: fmt.raw  grade.json  test-unit.raw
benches/: my_benchmark.rs  phenotype_xdd_lib_bench.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  MAINTENANCE.md  SCORECARD.md  getting-started.md  index.md  slsa.md
docs/.vitepress/: config.mjs
docs/boundary/: Benchora.md
docs/guides/: cutting-a-release.md
docs/intent/: Benchora.md
docs/research/: mined-kwality-deepeval-patterns.md
examples/: basic_usage.rs
src/: lib.rs
src/cli/: baseline.rs  compare.rs  compare_criterion.rs  compare_heliosbench.rs  error.rs  mod.rs  mutate.rs  mutate_parse.rs  report.rs  time_utils.rs  tracker_db.rs
src/contract/: mod.rs
src/domain/: mod.rs
src/mutation/: mod.rs
src/property/: mod.rs  strategies.rs
src/spec/: mod.rs
tests/: basic_test.rs  cli_help_contract_test.rs  cli_integration.rs  compare_threshold_test.rs  config_env_contract_test.rs  monitoring_contract_test.rs  time_utils_test.rs
