[package]
name = "gauge"
version = "0.1.0"
edition = "2021"
description = "Modern benchmarking framework"
license = "MIT"
repository = "https://github.com/KooshaPari/gauge"

[dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
